# practice-cuda

./: .gitignore  CMakeLists.txt  README.md
src/: hello_cuda.cu
test/: cublas-test.cu  test-kit.cu  test-kit.cuh
